# Pigs-on-the-moon

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt  construction.hpp  game.cpp  game.h  game.hpp  main.cpp  map.hpp  namingConvention.xml  result.hpp  todo.txt  vehicle.hpp
actors/: player.cpp  player.h  player.hpp  vehicle.cpp  vehicle.h  vehicle.hpp
conanBuild/: conanbuildinfo.cmake  conanbuildinfo.txt  conaninfo.txt
constructions/: base.cpp  base.h  base.hpp  construction.cpp  construction.h  construction.hpp
enums/: action.h  action.hpp
map/: hex.cpp  hex.h  hex.hpp  map.cpp  map.h  map.hpp
modules/: game.h  gameClient.cpp  gameClient.h  game_client.cpp  game_client.h
modules/AI/: AIClient.cpp  AIClient.h  AIPlayer.cpp  AIPlayer.h
modules/AIBehaviorTree/: aiBehaviorTree.cpp  aiBehaviorTree.h  tree.xml
modules/actors/: player.cpp  player.h  vehicle.cpp  vehicle.h
modules/actors/vehicle/: vehicle.cpp  vehicle.h
modules/actors/vehicles/: atSpg.cpp  atSpg.h  heavyTank.cpp  heavyTank.h  lightTank.cpp  lightTank.h  mediumTank.cpp  mediumTank.h  spg.cpp  spg.h  vehicle.cpp  vehicle.h
modules/client/: Client.cpp  Client.h  client.cpp  client.h
modules/client/constants/: Action.h  Result.h
modules/client/enums/: action.h  result.h
modules/constructions/: base.cpp  base.h  construction.cpp  construction.h
modules/enums/: action.h  result.h  types.cpp  types.h  vehicleTypes.cpp  vehicleTypes.h  vehicle_types.cpp  vehicle_types.h
modules/game/: actionController.cpp  actionController.h  action_controller.cpp  action_controller.h  game.cpp  game.h
modules/gui/: screen.h
modules/gui/controller/: Controller.cpp  Controller.h
modules/gui/elements/: MenuButton.h  PlayerStateLabel.h
modules/gui/menu/: Menu.cpp  Menu.h
modules/gui/model/: Bot.cpp  Bot.h
modules/gui/resources/config/: menu.json  view.json
modules/gui/shapes/: VehicleLogo.cpp  VehicleLogo.h
modules/gui/view/: MapView.cpp  MapView.h  View.cpp  View.h
modules/map/: Point3D.h  hex.cpp  hex.h  map.cpp  map.h
